k8s/redis-cluster-ip-service.yaml
apiVersion: v1

# Service: This directs the traffic to a pod.
kind: Service

metadata: 
  name: redis-cluster-ip-service
spec:

  # Make the service externally visible via the node
  type: ClusterIP

  selector: 

    # Select the client deployment (labeled "component: web")
    component: redis

  ports:

      # Inside the cluster, what port does the service expose?
    - port: 6379

      # This is the port on the pod that the request gets sent to.
      # The app needs to be listening for network requests on this port for the service to work.
      targetPort: 6379
