k8s/ingress-service.yaml
# Load balancer is a service object, hence will balance a single deployment (cluster of pods). We need to balance at least two objects. 

# Using Helm, which is similar to NPM for kubernetes. 
## Installed from script V3
## The installation will add 2 pods to our cluster 
## The cluster IP is in the "network services tab" in the GCP console 

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # Allowed paths 
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
